Final project idea to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello, World!</h1>
     <p>This is my first edit on GitHub.</p>
+    <p>I want to create a mobile IDE for mobile devices (PyCharm for Samsung phones or smth).</p>
 </body>
 </html>
